--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,6 +1,6 @@
 name: 👮‍♂️ Sanity checks
 
-on: [push, pull_request, workflow_dispatch]
+on: workflow_dispatch #[push, pull_request, workflow_dispatch]
 
 concurrency:
   group: ${{github.workflow}}-${{github.ref}}
