--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "coverage:forge": "forge coverage --report summary",
     "coverage:forge:report": "forge coverage --report lcov && lcov --remove lcov.info 'test/*' --output-file lcov.info --rc lcov_branch_coverage=1 && genhtml lcov.info --branch-coverage --output-dir coverage",
     "test:hh": "npx hardhat test",
-    "test:forge": "forge test -vvv --root . -C contracts/src --match-path \"contracts/test/*\" --out forge-artifacts",
+    "test:forge": "forge test -vvv --root . -C contracts/src --match-path \"contracts/test/*\" --out forge-artifacts --via-ir",
     "compile": "npx hardhat compile && forge build --root . -C contracts/src --optimize --out forge-artifacts",
     "size": "npx hardhat size-contracts",
     "xdeploy": "npx hardhat xdeploy",
