--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clean": "npx hardhat clean && forge clean",
     "snapshot": "forge snapshot --out forge-artifacts",
     "coverage:hh": "npx hardhat coverage",
-    "coverage:forge": "forge coverage --report summary",
+    "coverage:forge": "forge coverage --report summary --ir-minimum",
     "coverage:forge:report": "forge coverage --report lcov && lcov --remove lcov.info 'test/*' --output-file lcov.info --rc lcov_branch_coverage=1 && genhtml lcov.info --branch-coverage --output-dir coverage",
     "test:hh": "npx hardhat test",
     "test:forge": "forge test -vvv --root . -C contracts/src --match-path \"contracts/test/*\" --out forge-artifacts --via-ir",
@@ -152,7 +152,7 @@
     "prettier": "^3.2.4",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.1.1",
-    "solidity-coverage": "^0.8.5",
+    "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5.3.3",
