--- a/slither.config.json
+++ b/slither.config.json
@@ -7,5 +7,5 @@
   "exclude_low": false,
   "exclude_medium": false,
   "exclude_high": false,
-  "filter_paths": "contracts/lib|contracts/test|contracts/src/Create2DeployerLocal.sol|@openzeppelin|hardhat/console.sol|xdeployer"
+  "filter_paths": "contracts/lib|contracts/test|@chainlink|@openzeppelin|hardhat/console.sol|xdeployer"
 }
