--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -83,6 +83,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     permissions:
       pull-requests: write
+      contents: read
     strategy:
       matrix:
         os:
