--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "snapshot": "forge snapshot --out forge-artifacts",
     "coverage:hh": "npx hardhat coverage",
     "coverage:forge": "forge coverage --report summary --ir-minimum",
-    "coverage:forge:report": "forge coverage --report lcov && lcov --remove lcov.info 'test/*' --output-file lcov.info --rc lcov_branch_coverage=1 && genhtml lcov.info --branch-coverage --output-dir coverage",
+    "coverage:forge:report": "forge coverage --report lcov --ir-minimum && lcov --extract lcov.info '*/CryptoBottle.sol' --output-file lcov.info && genhtml lcov.info --output-directory coverage",
     "test:hh": "npx hardhat test",
     "test:forge": "forge test -vvv --root . -C contracts/src --match-path \"contracts/test/*\" --out forge-artifacts --via-ir",
     "compile": "npx hardhat compile && forge build --root . -C contracts/src --optimize --out forge-artifacts",
