--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "deploy:arbitrumsepolia": "npx hardhat run --network arbitrumSepolia scripts/deploy.ts",
     "deploy:arbitrummain": "npx hardhat run --network arbitrumMain scripts/deploy.ts",
     "deploy:arbitrumnova": "npx hardhat run --network arbitrumNova scripts/deploy.ts",
-    "deploy:mumbai": "npx hardhat run --network mumbai scripts/deploy.ts",
+    "deploy:polygonAmoy": "npx hardhat run --network polygonAmoy scripts/deploy.ts",
     "deploy:polygonzkevmtestnet": "npx hardhat run --network polygonZkEVMTestnet scripts/deploy.ts",
     "deploy:polygon": "npx hardhat run --network polygon scripts/deploy.ts",
     "deploy:polygonzkevmmain": "npx hardhat run --network polygonZkEVMMain scripts/deploy.ts",
