--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^1.1.0",
+    "@openzeppelin/upgrades-core": "^1.33.1",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.4"
