--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -138,6 +138,7 @@ jobs:
         run: NO_COLOR=1 forge coverage --report summary --ir-minimum --report lcov >> $GITHUB_STEP_SUMMARY
         env:
           FOUNDRY_PROFILE: default
+          PROPTEST_MAX_SHRINK_ITERS: 1000
 
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
