--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -135,11 +135,9 @@ jobs:
           FOUNDRY_PROFILE: default
 
       - name: Run coverage
+        run: PROPTEST_MAX_SHRINK_ITERS=1000  NO_COLOR=1 forge coverage --report summary --ir-minimum --report lcov >> $GITHUB_STEP_SUMMARY
         env:
-          NO_COLOR: 1
-          PROPTEST_MAX_SHRINK_ITERS: 1000
           FOUNDRY_PROFILE: default
-        run: forge coverage --report summary --ir-minimum --report lcov >> $GITHUB_STEP_SUMMARY
 
       - name: Setup LCOV
         uses: hrishikesh-kadam/setup-lcov@v1
