--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "solidity.compileUsingRemoteVersion": "latest",
-  "solidity.defaultCompiler": "localFile"
+  "solidity.defaultCompiler": "remote",
 }
