--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -45,7 +45,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
 
       - name: Install pnpm project with a clean slate
-        run: pnpm install --prefer-offline --frozen-lockfile
+        run: pnpm install --prefer-offline --no-frozen-lockfile
 
       - name: Prettier and lint
         run: pnpm lint:check
