--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -51,7 +51,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
 
       - name: Install pnpm project with a clean slate
-        run: pnpm install --prefer-offline --no-frozen-lockfile
+        run: pnpm install --prefer-offline --frozen-lockfile
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
